master/authentik/templates/ingress.yaml
#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  name: authentik-ingress
#spec:
#  entryPoints:
#    - websecure
#  routes:
#  - match: Host(`authentik.durp.info`) && PathPrefix(`/`) 
#    kind: Rule
#    services:
#    - name: authentik-server
#      port: 80
#  tls:
#    secretName: authentik-tls
#
#---
#
#apiVersion: cert-manager.io/v1
#kind: Certificate
#metadata:
#  name: authentik-tls
#spec:
#  secretName: authentik-tls
#  issuerRef:
#    name: letsencrypt-production
#    kind: ClusterIssuer
#  commonName: "authentik.durp.info"
#  dnsNames:
#  - "authentik.durp.info" 
#
#---
#
#kind: Service
#apiVersion: v1
#metadata:
#  name: authentik-external-dns
#  annotations:
#    external-dns.alpha.kubernetes.io/hostname: authentik.durp.info
#spec:
#  type: ExternalName
#  externalName: durp.info

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outpost-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: outpost.internal.durp.info
    https:
      paths:
      - backend:
          service:
            name: ak-outpost
            port:
              number: 9000
        path: /
        pathType: Prefix
